Refactor : comment api paging